Corrected social handlers spacing unit

--- a/style.css
+++ b/style.css
@@ -498,7 +498,7 @@ input[type='email'] {
 
     .footer-wrapper {
         display: grid;
-        grid-template-columns: 1fr 3fr 2fr;
+        grid-template-columns: 1.5fr 3fr 2fr;
         grid-template-areas: 
             "L S S F"
             "M S S C"
@@ -522,6 +522,9 @@ input[type='email'] {
     .social-handlers {
         grid-area: M;
         margin-top: 0;
+        flex-wrap: wrap;
+        gap: 1.0rem;
+        justify-content: flex-start;
     }
 
     .copyright {
